# Farm

IoTAgriDashboard/: .env  ai.py  anomaly_detection.py  api.py  app.py  config.py  data_processing.py  device_db_util.py  models.py  pyproject.toml  replit.nix  report.py  routes.py  sample_data.json  translations.py  utils.py  weather.py
IoTAgriDashboard/attached_assets/: Pasted--app-route-data-methods-POST-def-data-logger-info-Received-POST-request-to-dat-1743798415832.txt  Pasted-Vous-devez-d-velopper-une-plateforme-de-dashboard-avanc-e-pour-un-syst-me-IoT-agricole-La-solution--1743790688659.txt  R1WXBJC3YSQA.db  npk_send_serv_http_deepS_bme680_vib_uv_pluit_V6.ino
IoTAgriDashboard/device_databases/: R1WXBJC3YSQA.db  R1WXBJC3YSQj.db
IoTAgriDashboard/instance/: agro_iot.db
IoTAgriDashboard/static/css/: animations.css  assistant-animations.css  chatbot.css  dark-theme.css  style.css
IoTAgriDashboard/static/js/: alerts.js  charts.js  chatbot.js  dashboard.js  reports.js  theme.js  weather.js
IoTAgriDashboard/templates/: anomalies.html  chatbot.html  dashboard.html  device_data.html  history.html  layout.html  login.html  reports.html  settings.html  weather.html
IoTAgriDashboard/translations/: ar.json  en.json  fr.json
